# ntripstreams

./: .buildinfo  .gitignore  LICENSE  README.md  dev_environment.yml  genindex.html  index.html  install.html  ntripstreams.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  install.doctree  ntripstreams.doctree
.github/linters/: zizmor.yaml
.github/workflows/: codeql-analysis.yml  docs.yml  linter.yml  publish-to-test-n-pypi.yml  unittest.yml
_modules/: index.html
_modules/ntripstreams/: crc.html  ntripstreams.html  rtcm3.html
_sources/: install.rst.txt  ntripstreams.rst.txt
_static/: custom.css
docs/: conf.py  index.rst  install.rst
docs/_static/: custom.css
ntripstreams/: __init__.py  __main__.py  __version__.py  crc.py  ntripstreams.py  ntripstreams_simple.py  rtcm3.py
tests/: test_cli.py  test_crc.py  test_ntripstreams.py  test_rtcm3.py
tests/data/: message_type_samples.json  rtcm3_samples.json
tests/data/samples/: AgPartner_2.rtcm3  Gine-Albrk.rtcm3  aamakinen.rtcm3
