[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntripstreams"
description = "Library for Ntrip communication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lars Stenseng", email = "lars@stenseng.net" }]
keywords = ["ntrip", "rtcm", "gnss", "gps", "caster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["bitstring>=4.4,<5"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/stenseng/ntripstreams"
Repository = "https://github.com/stenseng/ntripstreams"

[project.scripts]
ntripstreams = "ntripstreams.__main__:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = [
    "sphinx",
    "sphinx-click",
    "sphinxcontrib-programoutput",
    "sphinx-rtd-theme",
]
dev = ["black", "ruff", "ntripstreams[test,docs]"]

[tool.setuptools.dynamic]
version = { attr = "ntripstreams.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["ntripstreams*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes, W = warnings, I = import sorting.
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
